--- a/ex3.tex
+++ b/ex3.tex
@@ -2,4 +2,6 @@
 
 I loaded in the generated mass data files.
 
+To do this exercise I would first generate realizations points x and y from the satellites profile. To do this I would use randomly draw a, b, and c values, the resulting calculated A normalization constant, and then obtain the x-values from the downloaded data sets.
+
 \lstinputlisting{ex3.py}
