--- a/AaronS_NUR_Set1.tex
+++ b/AaronS_NUR_Set1.tex
@@ -14,6 +14,10 @@
  My solutions to the first hand-on exercises for Numerical Recipes in Astrophysics 2019
 \end{abstract}
 
+
+Here are the function which I call throughout the following exercises.
+\input{myfunctions}
+
 \input{ex1}
 
 \input{ex2}
