--- a/ex2.tex
+++ b/ex2.tex
@@ -5,22 +5,26 @@
 The script is given by:
 \lstinputlisting{ex2.py}
 
-Our script produces the following results, see Fig. \ref{fig:fig1},
-compare with literature in Fig. \ref{fig:fig2}.
+It outputs the following results:
+\lstinputlisting{ex2output.txt}
 
 
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=0.9\linewidth]{./plots/sineplot.png}
-  \caption{The result of our program, as can be seen the 
-  sine and cosine are behaving exactly as expected, there 
-  for we can conclude ....}
-  \label{fig:fig1}
-\end{figure}
+%Our script produces the following results, see Fig. \ref{fig:fig1},
+%compare with literature in Fig. \ref{fig:fig2}.
 
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=0.9\linewidth]{./sine.png}
-  \caption{Literature result, say something...}
-  \label{fig:fig2}
-\end{figure}
+
+%\begin{figure}[h!]
+%  \centering
+%  \includegraphics[width=0.9\linewidth]{./plots/sineplot.png}
+%  \caption{The result of our program, as can be seen the 
+%  sine and cosine are behaving exactly as expected, there 
+%  for we can conclude ....}
+%  \label{fig:fig1}
+%\end{figure}
+
+%\begin{figure}[h!]
+%  \centering
+%  \includegraphics[width=0.9\linewidth]{./sine.png}
+%  \caption{Literature result, say something...}
+%  \label{fig:fig2}
+%\end{figure}
