updated latex format

--- a/template.tex
+++ b/template.tex
@@ -11,17 +11,26 @@
 \maketitle
 
 \begin{abstract}
- My solutions to the first hand-on exercises for Numerical Recipes in Astrophysics 2019
+ My solutions to the first hand-on exercises for Numerical Recipes in Astrophysics 2019. The first section shows the script of all my functions used in 1 and 2. Then, the scripts, their output, and all the corresponding plots for each exercise are shown.
 \end{abstract}
 
 
-
+\section{My Functions}
 \input{myfunctions}
 
+\newpage
+
+\section{Exercise 1}
 \input{ex1}
 
+\newpage
+
+\section{Exercise 2}
 \input{ex2}
 
+\newpage
+
+\section{Exercise 3}
 \input{ex3}
 
 
