--- a/myfunctions.tex
+++ b/myfunctions.tex
@@ -1,6 +1,6 @@
-\section{My Functions}
+% MY FUNCTIONS
 
-Here are the function which I call throughout the following exercises.
+Here are the functions which I call throughout the following exercises.
 
 \lstinputlisting{myfunctions.py}
 
