--- a/ex2.tex
+++ b/ex2.tex
@@ -36,7 +36,7 @@ It outputs the following results:
 \begin{figure}[!htb]
   \centering
   \includegraphics[width=0.8\linewidth]{./plots/poissoncomparison.png}
-  \caption{2(g) Taking the largest radial bin from \ref{fig:1000haloes}, we sort the galaxies falling in that bin by radial distances x. But by taking a histogram of the (area = 1 normalized) data and comparing it to the Poisson pdf generated with 1(a). We can see the result of the natural process of counting galaxies which fall in this radial bin. The mean of the poisson is taken from the mean of the radial bin and generated for events in each bin.}
+  \caption{2(g) Taking the largest radial bin from Fig. \ref{fig:1000haloes}, we sort the galaxies falling in that bin by radial distances x. But by taking a histogram of the (area = 1 normalized) data and comparing it to the Poisson pdf generated with 1(a). We can see the result of the natural process of counting galaxies which fall in this radial bin. The mean of the poisson is taken from the mean of the radial bin and generated for events in each bin.}
   \label{fig:comppoisson}
 \end{figure}
 
