--- a/template.tex
+++ b/template.tex
@@ -15,23 +15,23 @@
 \end{abstract}
 
 
-\section{My Functions}
+\begin{section}{My Functions}
 \input{myfunctions}
-
+\end{section}
 \newpage
 
-\section{Exercise 1}
+\begin{section}{Exercise 1}
 \input{ex1}
-
+\end{section}
 \newpage
 
-\section{Exercise 2}
+\begin{section}{Exercise 2}
 \input{ex2}
-
+\end{section}
 \newpage
 
-\section{Exercise 3}
+\begin{section}{Exercise 3}
 \input{ex3}
-
+\end{section}
 
 \end{document}
